[workspace]
members = [
    "ports/servo",
    "tests/unit/*",

    "ports/geckolib",
    "ports/geckolib/tests",
]
default-members = [
    "ports/servo",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
cgl = {path = "../cgl-rs"}
gleam = {path = "../gleam"}
io-surface = {path = "../io-surface-rs"}
offscreen_gl_context = {path = "../offscreen-rendering-context"}
servo-skia = {path = "../skia"}

[patch."https://github.com/servo/rust-azure"]
azure = {path = "../azure"}

[patch."https://github.com/servo/webrender"]
webrender = {path = "../webrender/webrender"}
webrender_api = {path = "../webrender/webrender_api"}
